[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "single_threaded_webserver"
path = "src/main_01.rs"

[[bin]]
name = "mult_threaded_webserver"
path = "src/main_02.rs"

[[bin]]
name = "grace_drop_webserver"
path = "src/main_03.rs"

[[bin]]
name= "async_webserver"
path = "src/main_04.rs"

[dependencies]
async-std = {version = "1.11.0", features = ["attributes"]}
futures = "0.3.21"
regex = "1.10.4"


